--- a/_includes/swc/who.html
+++ b/_includes/swc/who.html
@@ -2,7 +2,6 @@
   <strong>Who:</strong>
   The course is aimed at graduate students and other researchers.
   <strong>
-    You don't need to have any previous knowledge of the tools
-    that will be presented at the workshop.
+    Please see the schedule table for the prerequisites for each mini-workshop.
   </strong>
 </p>
