--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,32 +1,50 @@
-<div class="row">
-  <div class="col-md-6">
-    <h3>Day 1</h3>
-    <table class="table table-striped">
-      <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Building Programs with Python (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
-    </table>
-  </div>
-  <div class="col-md-6">
-    <h3>Day 2</h3>
-    <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Version Control with Git (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing Data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Managing Data with SQL (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
-    </table>
-  </div>
-</div>
+<table style="width:100%">
+  <tr>
+    <th>Date</th>
+    <th>Workshop</th>
+    <th>Prerequisites</th>
+    <th>Etherpad</th>
+  </tr>
+  <tr>
+    <td>September 13</td>
+    <td><a href = "https://swcarpentry.github.io/shell-novice/">Unix Shell</a></td>
+    <td>NA</td>
+    <td><a href = "https://pad.carpentries.org/2023-09-13-uwmadison-mini">Etherpad</a></td>
+  </tr>
+  <tr>
+    <td>September 27-28</td>
+      <td><a href = "https://uw-madison-datascience.github.io/2022-10-26-machine-learning-novice-sklearn/">Intro to Machine Learning</a></td>
+    <td>For this workshop, you need to have a basic familiarity with Python</td>
+    <td><a href = "https://pad.carpentries.org/2023-09-27-uwmadison-mini">Etherpad</a></td>
+  </tr>
+  <tr>
+    <td>October 11</td>
+     <td><a href = "https://carpentries-incubator.github.io/git-novice-branch-pr/">Git/GitHub</a></td>
+    <td>For this workshop, you need to be familiar with all of the commands taught in <a href = "http://swcarpentry.github.io/shell-novice/">this Unix Shell lesson</a></td>
+    <td><a href = "https://pad.carpentries.org/2023-10-11-uwmadison-mini">Etherpad</a></td>
+  </tr>
+  <tr>
+    <td>October 25-26</td>
+    <td><a href = "https://carpentries-incubator.github.io/docker-introduction/index.html">Intro to Docker</a></td>
+    <td>For this workshop, you need to have a base familiarity with using a command shell and the text editor.</td>
+    <td><a href = "https://pad.carpentries.org/2023-10-25-uwmadison-mini">Etherpad</a></td>
+  </tr>
+  <tr>
+    <td>November 8</td>
+    <td><a>CHTC</a></td>
+    <td>None</td>
+    <td><a href = "https://pad.carpentries.org/2023-11-08-uwmadison-mini">Etherpad</a></td>
+  </tr>
+    <tr>
+    <td>December 6</td>
+    <td><a href = "https://carpentries-incubator.github.io/python-interactive-data-visualizations/">Interactive Data Visualizations in Python< and Streamlit/a></td>
+    <td>For this workshop, you need to have a base familiarity with <a href = "http://swcarpentry.github.io/python-novice-gapminder/">Python</a>, the Unix shell, and Github.</td>
+    <td><a href = "https://pad.carpentries.org/2023-12-06-uwmadison-mini">Etherpad</a></td>
+  </tr>
+    <tr>
+    <td>December 20</td>
+    <td><a href = "https://carpentries-incubator.github.io/intro-data-viz/">The Basics of Data Visualization</a></td>
+    <td>None</td>
+    <td><a href = "https://pad.carpentries.org/2023-12-20-uwmadison-mini">Etherpad</a></td>
+  </tr>
+</table>
