--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,6 +1,6 @@
 <table style="width:100%">
   <tr>
-    <th>Date</th>
+    <th style="width:20%">Date</th>
     <th>Workshop</th>
     <th>Prerequisites</th>
     <th>Etherpad</th>
@@ -8,19 +8,19 @@
   <tr>
     <td>September 13</td>
     <td><a href = "https://swcarpentry.github.io/shell-novice/">Unix Shell</a></td>
-    <td>NA</td>
+    <td>None</td>
     <td><a href = "https://pad.carpentries.org/2023-09-13-uwmadison-mini">Etherpad</a></td>
   </tr>
   <tr>
     <td>September 27-28</td>
       <td><a href = "https://uw-madison-datascience.github.io/2022-10-26-machine-learning-novice-sklearn/">Intro to Machine Learning</a></td>
-    <td>For this workshop, you need to have a basic familiarity with Python</td>
+    <td>For this workshop, you need to have a basic familiarity with Python.</td>
     <td><a href = "https://pad.carpentries.org/2023-09-27-uwmadison-mini">Etherpad</a></td>
   </tr>
   <tr>
     <td>October 11</td>
      <td><a href = "https://carpentries-incubator.github.io/git-novice-branch-pr/">Git/GitHub</a></td>
-    <td>For this workshop, you need to be familiar with all of the commands taught in <a href = "http://swcarpentry.github.io/shell-novice/">this Unix Shell lesson</a></td>
+    <td>For this workshop, you need to be familiar with all of the commands taught in <a href = "http://swcarpentry.github.io/shell-novice/">this Unix Shell lesson.</a></td>
     <td><a href = "https://pad.carpentries.org/2023-10-11-uwmadison-mini">Etherpad</a></td>
   </tr>
   <tr>
@@ -37,7 +37,7 @@
   </tr>
     <tr>
     <td>December 6</td>
-    <td><a href = "https://carpentries-incubator.github.io/python-interactive-data-visualizations/">Interactive Data Visualizations in Python< and Streamlit/a></td>
+    <td><a href = "https://carpentries-incubator.github.io/python-interactive-data-visualizations/">Interactive Data Visualizations in Python and Streamlit</a></td>
     <td>For this workshop, you need to have a base familiarity with <a href = "http://swcarpentry.github.io/python-novice-gapminder/">Python</a>, the Unix shell, and Github.</td>
     <td><a href = "https://pad.carpentries.org/2023-12-06-uwmadison-mini">Etherpad</a></td>
   </tr>
