--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,3 +1,4 @@
+<h3>Install the Workshop Software</h3>
 <table style="width:100%">
   <tr>
     <th style="width:15%">Date</th>
@@ -20,25 +21,25 @@
   <tr>
     <td>October 11</td>
      <td><a href = "https://carpentries-incubator.github.io/git-novice-branch-pr/">Git/GitHub</a></td>
-    <td>For this workshop, you need to be familiar with all of the commands taught in <a href = "http://swcarpentry.github.io/shell-novice/">this Unix Shell lesson.</a></td>
+    <td>For this workshop, you need to be familiar with all of the commands taught in <a href = "http://swcarpentry.github.io/shell-novice/">this Unix Shell lesson</a>.</td>
     <td><a href = "https://pad.carpentries.org/2023-10-11-uwmadison-mini">Etherpad</a></td>
   </tr>
   <tr>
     <td>October 25-26</td>
     <td><a href = "https://carpentries-incubator.github.io/docker-introduction/index.html">Intro to Docker</a></td>
-    <td>For this workshop, you need to have a base familiarity with using a command shell and the text editor.</td>
+    <td>For this workshop, you need to be familiar with all of the commands taught in <a href= "http://swcarpentry.github.io/shell-novice/">this Unix Shell lesson</a>.</td>
     <td><a href = "https://pad.carpentries.org/2023-10-25-uwmadison-mini">Etherpad</a></td>
   </tr>
   <tr>
     <td>November 8</td>
     <td><a>CHTC</a></td>
-    <td>None</td>
+    <td>TBD</td>
     <td><a href = "https://pad.carpentries.org/2023-11-08-uwmadison-mini">Etherpad</a></td>
   </tr>
     <tr>
     <td>December 6</td>
     <td><a href = "https://carpentries-incubator.github.io/python-interactive-data-visualizations/">Interactive Data Visualizations in Python and Streamlit</a></td>
-    <td>For this workshop, you need to have a base familiarity with <a href = "http://swcarpentry.github.io/python-novice-gapminder/">Python</a>, the Unix shell, and Github.</td>
+    <td>For this workshop, you need to have a base familiarity with <a href = "http://swcarpentry.github.io/python-novice-gapminder/">Python</a>. Knowledge of GitHub and Unix shell will be helpful, but not required.</td>
     <td><a href = "https://pad.carpentries.org/2023-12-06-uwmadison-mini">Etherpad</a></td>
   </tr>
     <tr>
