--- a/_includes/swc/setup.html
+++ b/_includes/swc/setup.html
@@ -8,7 +8,7 @@
   <tr>
     <td>September 13</td>
     <td>Unix Shell</td>
-    <td><a href = "https://swcarpentry.github.io/shell-novice/setup.html">Setup Instructions</a></td>
+    <td><a href = "https://swcarpentry.github.io/shell-novice/index.html">Setup Instructions</a></td>
   </tr>
   <tr>
     <td>September 27-28</td>
