--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -14,31 +14,31 @@
   <tr>
     <td>September 27-28</td>
       <td><a href = "https://uw-madison-datascience.github.io/2022-10-26-machine-learning-novice-sklearn/">Intro to Machine Learning</a></td>
-    <td>For this workshop, you need to have a basic familiarity with Python.</td>
+    <td>You need to have a basic familiarity with Python.</td>
     <td><a href = "https://pad.carpentries.org/2023-09-27-uwmadison-mini">Etherpad</a></td>
   </tr>
   <tr>
     <td>October 11</td>
      <td><a href = "https://carpentries-incubator.github.io/git-novice-branch-pr/">Git/GitHub</a></td>
-    <td>For this workshop, you need to be familiar with all of the commands taught in <a href = "http://swcarpentry.github.io/shell-novice/">this Unix Shell lesson</a>.</td>
+    <td>You need to be familiar with all of the commands taught in <a href = "http://swcarpentry.github.io/shell-novice/">this Unix Shell lesson</a>.</td>
     <td><a href = "https://pad.carpentries.org/2023-10-11-uwmadison-mini">Etherpad</a></td>
   </tr>
   <tr>
     <td>October 25-26</td>
     <td><a href = "https://carpentries-incubator.github.io/docker-introduction/index.html">Intro to Docker</a></td>
-    <td>For this workshop, you need to be familiar with all of the commands taught in <a href= "http://swcarpentry.github.io/shell-novice/">this Unix Shell lesson</a>.</td>
+    <td>You need to be familiar with all of the commands taught in <a href= "http://swcarpentry.github.io/shell-novice/">this Unix Shell lesson</a>.</td>
     <td><a href = "https://pad.carpentries.org/2023-10-25-uwmadison-mini">Etherpad</a></td>
   </tr>
   <tr>
     <td>November 8</td>
     <td><a>CHTC</a></td>
-    <td>TBD</td>
+    <td>Open only to <strong>UW-Madison students</strong>and <strong>affiliates</strong>.</td>
     <td><a href = "https://pad.carpentries.org/2023-11-08-uwmadison-mini">Etherpad</a></td>
   </tr>
     <tr>
     <td>December 6</td>
     <td><a href = "https://carpentries-incubator.github.io/python-interactive-data-visualizations/">Interactive Data Visualizations in Python and Streamlit</a></td>
-    <td>For this workshop, you need to have a base familiarity with <a href = "http://swcarpentry.github.io/python-novice-gapminder/">Python</a>. Knowledge of GitHub and Unix shell will be helpful, but not required.</td>
+    <td>You need to have a base familiarity with <a href = "http://swcarpentry.github.io/python-novice-gapminder/">Python</a>. Knowledge of GitHub and Unix shell will be helpful, but not required.</td>
     <td><a href = "https://pad.carpentries.org/2023-12-06-uwmadison-mini">Etherpad</a></td>
   </tr>
     <tr>
