--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -32,7 +32,7 @@
   <tr>
     <td>November 8</td>
     <td><a>CHTC</a></td>
-    <td>Open only to <strong>UW-Madison students</strong>and <strong>affiliates</strong>.</td>
+    <td>Open only to <strong>UW-Madison students and affiliates</strong>.</td>
     <td><a href = "https://pad.carpentries.org/2023-11-08-uwmadison-mini">Etherpad</a></td>
   </tr>
     <tr>
